turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:13: error: ')' expected but '<-' found.
	while (i<-0 to rule.length-1 && pos<0) {
                ^LangtonsAnt:18: error: ';' expected but string literal found.
	if (rule(pos)=="R") {droite()}
                       ^