turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {

	def setCouleurSol(c:java.awt.Color) = {
		setCouleurBrosse(c)
		baisseBrosse()
		leveBrosse()
	}

	var pos = 0-1

	//cherche la position "pos" de la couleur dans le tableaux
	while (i<-0 to rule.length-1 && pos<0) {
		if (getCouleurSol()==colors(i)) {pos=i}
	}

	//Tourne en fonction de la couleur
	if (rule(pos)=="R") {droite()}
	else {gauche()}

	//Change la couleur
	if(pos!=rule.length-1) {setCouleurSol(colors(pos+1))}
	else {setCouleurSol(colors(0))}

	avance()

}
